--- a/pom.xml
+++ b/pom.xml
@@ -4,4 +4,5 @@
   <artifactId>pavithr</artifactId>
   <version>0.0.1-SNAPSHOT</version>
   <name>pavithrr</name>
+  <packaging>war<packaging>
 </project>
